[gd_scene load_steps=4 format=3 uid="uid://custom_confirm_dialog"]

[ext_resource type="FontFile" uid="uid://dnyg6pd3wordy" path="res://assets/fonts/RHR-CN-0.990/ResourceHanRoundedCN-Heavy.ttf" id="1_font"]
[ext_resource type="Script" path="res://views/bird_house/custom_confirm_dialog.gd" id="2_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.25, 0.35, 0.25, 0.98)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.4, 0.6, 0.4, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="CustomConfirmDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_script")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="DialogPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="MarginContainer" type="MarginContainer" parent="DialogPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="DialogPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="DialogPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.7, 0.3, 1)
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 28
text = "确认放生"
horizontal_alignment = 1

[node name="Message" type="Label" parent="DialogPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 20
text = "确定要放生这只鸟吗？

此操作无法撤销！"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ButtonsContainer" type="HBoxContainer" parent="DialogPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="ConfirmButton" type="Button" parent="DialogPanel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 22
text = "确定"

[node name="CancelButton" type="Button" parent="DialogPanel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 22
text = "取消"
